# JitCat

./: .gitignore  BUILDING_JITCAT.md  BUILDING_LLVM.md  CMakeLists.txt  CNAME  LICENSE  README.md  azure-pipelines.yml
examples/basicexample/: BasicExample.cpp  CMakeLists.txt  ReflectionTestObject.cpp  ReflectionTestObject.h  ReflectionTestObject2.cpp  ReflectionTestObject2.h  ReflectionTestRoot.cpp  ReflectionTestRoot.h
include/jitcat/: ASTHelper.h  ASTNode.h  ASTNodeParser.h  ArrayMemberFunctionInfo.h  ArrayTypeInfo.h  AssignableType.h  AutoCompletion.h  BasicTypeMemberReference.h  BasicTypeMemberReferenceHeaderImplementation.h  BuildIndicesHelper.h  CatASTNode.h  CatASTNodeType.h  CatASTNodes.h  CatASTNodesDeclares.h  CatArgumentList.h  CatArrayIndex.h  CatAssignableExpression.h  CatAssignmentOperator.h  CatBasicHostClass.h  CatBuiltInFunctionCall.h  CatBuiltInFunctionType.h  CatClassDefinition.h  CatConstruct.h  CatDeferredHostClass.h  CatDefinition.h  CatDestruct.h  CatError.h  CatErrorExpression.h  CatExpression.h  CatForLoop.h  CatFunctionCall.h  CatFunctionDefinition.h  CatFunctionOrConstructor.h  CatFunctionParameterDefinitions.h  CatGenericType.h  CatGrammar.h  CatGrammarType.h  CatHostClass.h  CatHostClasses.h  CatHostClassesHeaderImplementation.h  (+179 more)
include/jitcatvalidator/: JitCatValidator.h
src/jitcat/: ASTHelper.cpp  ASTNodeParser.cpp  ArrayMemberFunctionInfo.cpp  ArrayTypeInfo.cpp  AutoCompletion.cpp  CMakeLists.txt  CatArgumentList.cpp  CatArrayIndex.cpp  CatAssignmentOperator.cpp  CatBuiltInFunctionCall.cpp  CatClassDefinition.cpp  CatConstruct.cpp  CatDestruct.cpp  CatError.cpp  CatErrorExpression.cpp  CatForLoop.cpp  CatFunctionCall.cpp  CatFunctionDefinition.cpp  CatFunctionOrConstructor.cpp  CatFunctionParameterDefinitions.cpp  CatGenericType.cpp  CatGrammar.cpp  CatHostClasses.cpp  CatIdentifier.cpp  CatIfStatement.cpp  CatIndirectionConversion.cpp  CatInfixOperator.cpp  CatInfixOperatorType.cpp  CatInheritanceDefinition.cpp  CatLib.cpp  CatLinkNode.cpp  CatLiteral.cpp  CatLog.cpp  CatMemberAccess.cpp  CatMemberFunctionCall.cpp  CatOperatorNew.cpp  CatOperatorNewArray.cpp  CatOwnershipSemanticsNode.cpp  CatPrefixOperator.cpp  CatRange.cpp  (+103 more)
src/jitcatvalidator/: CMakeLists.txt  JitCatValidator.cpp  dllmain.cpp
test/jitcattest/: CMakeLists.txt  JitCatTest.cpp  ReflectionTestObject.cpp  ReflectionTestObject.h  ReflectionTestObject2.cpp  ReflectionTestObject2.h  ReflectionTestRoot.cpp  ReflectionTestRoot.h
test/jitcatunittests/: AssignmentTests.cpp  BasicTypesTests.cpp  CMakeLists.txt  CatLibTests.cpp  ContainerTests.cpp  CustomTypesTests.cpp  EnumTests.cpp  ExpressionAnyTests.cpp  IndirectionTests.cpp  MathsFunctionsTests.cpp  MemberFunctionCallTests.cpp  MemoryLeakTests.cpp  NestedReflectedObject.cpp  NestedReflectedObject.h  OperatorOverloadingTests.cpp  OperatorPrecedenceTests.cpp  PrecompilationTest.cpp  PrecompilationTest.h  RandomFunctionsTests.cpp  RegressionTests.cpp  SelectFunctionTests.cpp  StaticFunctionCallTests.cpp  StaticMemberVariableTests.cpp  StringFunctionsTests.cpp  StringTests.cpp  TestEnum.cpp  TestEnum.h  TestHelperFunctions.h  TestObjects.cpp  TestObjects.h  TestVector4.cpp  TestVector4.h  Tests.cpp  TrigonometricFunctionsTests.cpp  TypeConversionFunctionTests.cpp  TypeSerializationTests.cpp  VectorTests.cpp  main.cpp
tools/jitcatvalidatortool/: CMakeLists.txt  JitCatValidatorTool.cpp
